first mobile visibility fixes

--- a/music/music.css
+++ b/music/music.css
@@ -45,6 +45,13 @@ html,body {
   text-align: justify;
 }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .music-body {
+    font-size: 26px;
+    line-height: 42px;
+  }
+}
+
 .post-title {
   font-size: 3.0vmin;
   line-height: 4.8vmin;
